--- a/web/M1/bacheca.html
+++ b/web/M1/bacheca.html
@@ -16,44 +16,30 @@ and open the template in the editor.
         <div id="title">
             <h1>Elenco post</h1>
         </div>
-        <table style="width:100%">
-            <tr>
-              <th>Nome utente</th>
-              <th>Foto profilo</th> 
-              <th>Contenuto post</th>
-            </tr>
-            <tr>
-              <td>Polly Nomio</td>
-              <td>
-                  <img title="profilo" alt="Polly Nomio"
+        <div>
+            <h2>Polly Nomio</h2>
+            <img title="profilo" alt="Polly Nomio"
                     src="../Immagini/pollynomio.jpg" width="150" height="150">
-              </td>
-              <td>Anche oggi ho preso un 30, il venticinquesimo della mia carriera!</td>
-            </tr>
-            <tr>
-              <td>Jon Snow</td>
-              <td>
-                  <img title="profilo2" alt="Jon Snow"
+            <p>
+                Anche oggi ho preso un 30, il venticinquesimo della mia carriera!
+            </p>
+            <br>
+            <h2>Jon Snow</h2>
+            <img title="profilo2" alt="Jon Snow"
                     src="../Immagini/jonsnow.png" width="150" height="150">
-              </td>
-              <td>
-                  <img title="allegato" alt="Jon Snow Baba"
+            <br>
+             <img title="allegato" alt="Jon Snow Baba"
                     src="../Immagini/jonsnowbaba.jpg" width="150" height="150">
-              </td>
-            </tr>
-            <tr>
-              <td>Polemista misterioso</td>
-              <td>
-                  <img title="profilo3" alt="Polemista misterioso"
+            <br>
+            <h2>Polemista Misterioso</h2>
+            <img title="profilo3" alt="Polemista misterioso"
                     src="../Immagini/illuminati.jpg" width="150" height="150">
-              </td>
-              <td>
-                  <a href="http://ilfalzoquotidiano.com/matteo-renzi-ritratta-non-conoscevo-mio-padre/">
+            <br>
+            <a href="http://ilfalzoquotidiano.com/matteo-renzi-ritratta-non-conoscevo-mio-padre/">
                       A A A - Matteo Renzi ritratta: non conoscevo mio padre - CLIKKA QUI
                   </a>
-              </td>
-            </tr>
-        </table>
+            <br><br><br>
+        </div>
         <nav id="externalnav">
             <a href="http://localhost:8080/AmmM1/M1/descrizione.html" target="_blank">Vai alla descrizione</a><br>
             <a href="http://localhost:8080/AmmM1/M1/login.html" target="_blank">Vai al login</a><br>
