--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
+        <a href="http://localhost:8080/AmmM1/M1/descrizione.html" target="_blank">Vai alla descrizione</a>
     </body>
 </html>
