--- a/web/M1/descrizione.html
+++ b/web/M1/descrizione.html
@@ -11,23 +11,26 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Sara Valeria Scardigli">
         <meta name="keywords" content="descrizione social network">
+        
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     </head>
     <body>
-        <header>
             <div id="title">
                 <h1>NerdBook</h1>
             </div>
-        </header>
-        <nav id="internalnav">
-            <ol>
-                <li><a href="#presentazione">Presentazione</a></li>
-                <li><a href="#pubblico">A chi è rivolto</a></li>
-                <li><a href="#registrazione">Come registrarsi</a></li>
-                <li><a href="#info">Informazioni di servizio</a></li>
-            </ol>
+        <nav>
+            <ul>
+                <li><a href="#titolo">Cos'è NerdBook?</a>
+                        <li><a href="#presentazione">Presentazione</a></li>
+                        <li><a href="#pubblico">A chi è rivolto</a></li>
+                        <li><a href="#registrazione">Come registrarsi</a>
+                        <li><a href="#info">Informazioni di servizio</a></li>
+                        <li><a href="http://localhost:8080/AmmM1/M1/login.html">Vai al login</a></li>
+ 
+            </ul>
         </nav>
         
-        <h1>Cos'è NerdBook?</h1>
+        <h1 id="titolo">Cos'è NerdBook?</h1>
         <article id="article1">
             <h2 id="presentazione">Presentescion</h2>
             <p>
@@ -57,8 +60,5 @@ and open the template in the editor.
                 verde e il sistema diventa a pagamento. Qui lo diciamo e qui lo neghiamo: sarà sempre gratutio.
             </p>
         </article>
-        <nav id="externalnav">
-            <a href="http://localhost:8080/AmmM1/M1/login.html" target="_blank">Vai al login</a>
-        </nav>
     </body>
 </html>
